add public network support
